--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,13 @@
-<h1>Display your Pirate here</h1>
-
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h1>Pirate Details</h1>
+<h3>Name: <%= @pirate.name %></h3>
+<h3>Weight: <%= @pirate.weight %> lbs</h3>
+<h3>Height: <%= @pirate.height %> cm</h3>
+<br>
+<h1>Ship Details</h1>
+<% @ships.each_with_index do |ship, i| %>
+<h2>Ship # <%= i+1 %></h2>
+<h3><%= ship.name %></h3>
+<h3><%= ship.type %></h3>
+<h3><%= ship.booty %></h3>
+<br>
+<% end %>
